Entrega final de la recete tarta de galletas

--- a/RECETA/receta.html
+++ b/RECETA/receta.html
@@ -10,7 +10,10 @@
 <body>
     <div id="wrapper">
         <h1>Tarta de galletas</h1>
-        <blockquote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia qui nesciunt placeat aliquid libero autem repellendus id fuga! Nobis accusantium assumenda quaerat recusandae commodi dolorum repellat nulla hic atque aliquam."</blockquote>
+        <blockquote>"Esta es una tarta tipica familiar muy conocida en España, la cual siempre se suele comer en cumpleaños, bodas, bautizos, ..."</blockquote>
+        <div class="tartadegalletas">
+             <img src="../RECETA/img/tarta-de-galletas-y-chocolate-de-la-abuela-racion.jpg" alt="">     
+             </div>
         <h2>Ingredientes</h2>
         <ul>
             <li>200 g de chocolate negro</li>
